--- a/src/card.handlebars
+++ b/src/card.handlebars
@@ -1,5 +1,5 @@
-<div class="col-lg-3 mb-4" >
-  <div class="card mb-4" style="width: 18rem;">
+<div class="col-lg-3 col-md-4 col-sm-6 mb-4" >
+  <div class="card mb-4">
     <img src="https://via.placeholder.com/250" class="card-img-top">
     <div class="card-body">
       <h5 class="card-title">{{name}}</h5>
